# Obj-Fenix

./: Licence  README
compilador/: CMakeLists.txt  InterfaceToBuild.h  README.txt  bytecode.asm  bytecode_debug.out  compilador.gpr  ofx-c  out.ofb  out2.ofb  semantic_debug.out  syntactic_debug.out  tmp
compilador/BaseLibs/: Base.ofx  BaseOptimized.ofx
compilador/Projects/: Compilador
compilador/Release/: ofx-c
compilador/UML/: IDENTIFIER types.graphml  link_syntactic_semantic.graphml
compilador/compilador.xcodeproj/: dracks.mode1v3  dracks.pbxuser  jaume.mode1v3  jaume.pbxuser  jsingla.mode1v3  jsingla.pbxuser  project.pbxproj
compilador/compilador.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
compilador/src/: ASM_instructions.h  CMakeLists.txt  SemanticAnalisis.cpp  SemanticAnalisis.h  debug.cpp  debug.h  lexical_analyzer.l  main.cpp  main.h  symtab.h  syntactic_parser.y  syntactic_parser_pract.y  tools.cpp  tools.h
compilador/src/classes/: CMakeLists.txt  Objeto.cpp  Objeto.h  clist.cpp  clist.h  ctable.cpp  ctable.h  nameSpace.cpp  nameSpace.h  syntacticElement.cpp  syntacticElement.h
compilador/src/generator/: CMakeLists.txt  OFXByteCode.cpp  OFXByteCode.h  OFXClass.cpp  OFXClass.h  OFXConstant.cpp  OFXConstant.h  OFXRootGenerator.cpp  OFXRootGenerator.h
compilador/src/treeCode/: Base.cpp  Base.h  CMakeLists.txt  Condition.cpp  Condition.h  Expresion.cpp  Expresion.h  Loop.cpp  Loop.h
compilador/test/: First.ofx  PruebaListas.ofx  TestGame1.ofx  hello_world.ofx  proves.ofx  second.ofx
vm/: CMakeLists.txt  Doxyfile  Readme
vm/Tests/: .sconsign.dblite  BenchmarkBase.cpp  ObjectTest.cpp  ObjectTest.h  SConstruct  VMapp.cpp  firstSample.s
vm/optimizationTests/: test  test.cpp
vm/src/: ASM_instructions.h  CMakeLists.txt  main.cpp  tools.cpp  tools.h
vm/src/BuiltIn/: BIMethod.h  Boolean.cpp  Boolean.h  CMakeLists.txt  Integer.cpp  Integer.h  List.cpp  List.h  OfxMethod.cpp  OfxMethod.h  Shell.cpp  (+11 more)
vm/vm.xcodeproj/: dracks.mode1v3  dracks.pbxuser  project.pbxproj
(+72 files in other folders)
